--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Authlib==0.14.3
 Flask==1.1.2
 marshmallow==3.7.1
-zappa==0.51.0
 boto3==1.17.54
 botocore==1.20.54
-git+https://github.com/CiscoSecurity/tr-05-jwt-generator.git
+python-dateutil~=2.6.1
